--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.56.2",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
