--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:fullstack": "concurrently \"npm run dev\" \"cd api-server && npm start\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -75,6 +76,7 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "caniuse-lite": "^1.0.30001724",
+    "concurrently": "^7.6.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
